--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,33 @@
 @import '../node_modules/normalize.css/normalize';
+@import 'https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900';
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #0a0a0a;
+  font-family: 'Lato';
+  line-height: 1.3;
+  color: #ffffff;
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(-5rem);
+
+    header {
+      font-size: 4rem;
+      font-weight: 700;
+      margin-bottom: 3rem;
+    }
+
+    .description {
+      max-width: 45.84rem;
+      font-size: 2rem;
+      font-weight: 300;
+    }
+  }
+}
