--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 @import '../node_modules/normalize.css/normalize';
-@import 'https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900';
+@import 'https://fonts.googleapis.com/css?family=Lato:300,700';
 
 body {
   height: 100vh;
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #0a0a0a;
+  background-color: #1375b7;
   font-family: 'Lato';
   line-height: 1.3;
   color: #ffffff;
@@ -17,12 +17,12 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  transform: translateY(-5rem);
 }
 
 header {
   font-size: 4rem;
   font-weight: 700;
+  text-shadow: 0.08em 0.08em #0968a9;
   margin-bottom: 3rem;
 }
 
@@ -30,4 +30,24 @@ header {
   max-width: 45.84rem;
   font-size: 2rem;
   font-weight: 300;
+}
+
+footer {
+  margin-top: 3rem;
+
+  .fa {
+    font-size: 4.5rem;
+    color: #ffffff;
+    cursor: pointer;
+    transition: opacity 200ms ease-in-out;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  > a,
+  > .fa {
+    margin: 0 0.9rem;
+  }
 }
