--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,9 @@
-@import '../node_modules/normalize.css/normalize';
 @import 'https://fonts.googleapis.com/css?family=Lato:300,700';
+
+@import '../node_modules/normalize.css/normalize';
+@import '../node_modules/animate.css/source/_base';
+@import '../node_modules/animate.css/source/fading_entrances/fadeIn';
+@import '../node_modules/animate.css/source/attention_seekers/pulse';
 
 body {
   height: 100vh;
@@ -8,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #1375b7;
-  font-family: 'Lato';
+  font-family: Lato, Helvetica, sans-serif;
   line-height: 1.3;
   color: #ffffff;
 }
@@ -19,21 +23,30 @@ main {
   align-items: center;
 }
 
-header {
+.intro {
   font-size: 4rem;
   font-weight: 700;
   text-shadow: 0.08em 0.08em #0968a9;
   margin-bottom: 3rem;
+  animation-duration: 2s;
 }
 
-.description {
+.attention {
+  animation-duration: 0.8s;
+}
+
+.bio {
   max-width: 45.84rem;
   font-size: 2rem;
   font-weight: 300;
+  animation-delay: 0.4s;
+  animation-duration: 1.6s;
 }
 
-footer {
+.icons {
   margin-top: 3rem;
+  animation-delay: 0.8s;
+  animation-duration: 1.2s;
 
   .fa {
     font-size: 4.5rem;
