Add margin and padding

--- a/src/main.scss
+++ b/src/main.scss
@@ -36,7 +36,7 @@ main {
   font-size: 4rem;
   font-weight: 700;
   text-align: center;
-  margin: 0 1.9rem 3rem;
+  margin: 4rem 1.9rem 3rem;
   animation-duration: 2s;
 }
 
@@ -55,6 +55,7 @@ main {
 
 .icons {
   margin-top: 3rem;
+  padding-bottom: 4rem;
   animation-delay: 0.8s;
   animation-duration: 1.2s;
 
